# wutai

./: .gitignore  AGENTS.md  README.md  index.html  maintainer-badge.json  maintainer-summary.json  package-lock.json  package.json  playwright.config.ts  requirements-gpt-researcher.txt
.stillmirror/: .gitignore
config/: wutai-adapter-registry.json  wutai-attention-policy.example.json  wutai-cli-policy-profiles.json  wutai-trust-policy-profiles.json  wutai-trust-policy.example.json  wutai-trusted-producers.example.json
docs/: agent-packet-inbox.md  ai-act-evidence-mapping.md  architecture.md  attention-decision-gate.md  consumer-attestation-gate.md  development.md  mvp.md  packet-contract.md  persona-and-voice.md  product-brief.md  ratification-prereg.md  security-model.md  underwriter-discovery-prereg.md  underwriting-evidence-inventory.md
examples/: adapter-proof-runner.mjs  attention-decision.auto-accepted.example.json  attention-decision.blocked-unowned.example.json  consumer-attestation.example.json  external-agent-wrapper.mjs  review-session.example.json
schemas/: adapter-registry.schema.json  attention-decision.schema.json  attention-policy.schema.json  cli-policy-preflight.schema.json  consumer-attestation-check.schema.json  consumer-attestation.schema.json  local-script-trace.schema.json  packet-retention-decision.schema.json  review-session.schema.json  session-audit.schema.json  session-ledger.schema.json  trust-policy.schema.json  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+50 files in other folders)
