[package]
name = "wutai"
version = "0.1.0"
description = "Personal computer agent shell"
authors = ["haeliotang <haeliocc@gmail.com>"]
edition = "2021"

[lib]
name = "wutai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
keyring = "4.1.1"
url = "2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
